# decision-trees

./: README.md  body.py  clothes.py  day.decision  dress.decision  item.py  item_collection.py  location.py  main.decision  main.py  memory.py  new-github-project-location.md  person.py  plan-home-work-day.decision  pyproject.toml  undress.decision  wake-up.decision  work.decision
activity/: question-answering.py  read.decision  read.py
computer/: browse.decision  browse.py  lock.decision  lock.py  login.decision  login.py  periodic_check.decision  periodic_check.py  sleep.decision  sleep.py  wake_up.decision  wake_up.py
daily/: anki.decision  anki.py  day.decision  day.py  day_type.decision  day_type.py  github.decision  github.py  hygiene.decision  hygiene.py  location.decision  location.py  sleep.decision  sleep.py  time.decision  time.py  wake-up.decision  wake_up.decision  wake_up.py
day/: home-work.decision  home_work.decision  home_work.py  off.decision  off.py  routine.decision  routine.py  work.decision  work.py
dress/: change.decision  change.py  dress.decision  dress.py  pick_clothes.decision  pick_clothes.py  remove.decision  remove.py  undress.decision  undress.py  wear.decision  wear.py
eat/: breakfast.decision  dinner.decision  dinner.py  eat.decision  eat.py  lunch.decision  lunch.py  wash_dishes.decision  wash_dishes.py  work-lunch.decision  work_lunch.decision  work_lunch.py
generic/: ask.py  askBoolean.decision  askBoolean.py  choose.decision  choose.py  drop.decision  drop.py  entertainment.decision  entertainment.py  go-to.decision  pick.py  (+9 more)
(+39 files in other folders)
