[tool.poetry]
name = "decision-trees"
version = "0.1.0"
description = "Decision trees is my attempt at the introspection and modeling of my own decisions processes."
authors = ["Tom Rochette <tom@tomrochette.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
